--- a/03-results/10-tables/meta-study-tables/imp_Linear_slope_Interaction_adj.html
+++ b/03-results/10-tables/meta-study-tables/imp_Linear_slope_Interaction_adj.html
@@ -69,7 +69,7 @@
    <td style="text-align:right;"> ELSA </td>
    <td style="text-align:center;"> -0.008 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.68 </td>
+   <td style="text-align:center;"> 0.34 </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
@@ -87,28 +87,28 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.02 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.33 </td>
-   <td style="text-align:center;"> -0.03 </td>
-   <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.09 </td>
+   <td style="text-align:center;"> 0.16 </td>
+   <td style="text-align:center;"> <strong>-0.03</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
    <td style="text-align:center;"> -0.009 </td>
    <td style="text-align:center;"> 0.01 </td>
-   <td style="text-align:center;"> 0.41 </td>
+   <td style="text-align:center;"> 0.20 </td>
    <td style="text-align:center;"> -0.010 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.57 </td>
+   <td style="text-align:center;"> 0.28 </td>
    <td style="text-align:center;"> -0.010 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.81 </td>
+   <td style="text-align:center;"> 0.41 </td>
    <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> 0.06 </td>
-   <td style="text-align:center;"> 0.11 </td>
+   <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> -0.03 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.26 </td>
+   <td style="text-align:center;"> 0.13 </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.007</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -123,7 +123,7 @@
    <td style="text-align:right;"> HILDA </td>
    <td style="text-align:center;"> -0.003 </td>
    <td style="text-align:center;"> 0.008 </td>
-   <td style="text-align:center;"> 0.73 </td>
+   <td style="text-align:center;"> 0.36 </td>
    <td style="text-align:center;"> <strong>-0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -132,19 +132,19 @@
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> -0.12 </td>
    <td style="text-align:center;"> 0.08 </td>
-   <td style="text-align:center;"> 0.13 </td>
+   <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.55 </td>
+   <td style="text-align:center;"> 0.27 </td>
    <td style="text-align:center;"> <strong>-0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.006</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
-   <td style="text-align:center;"> 0.01 </td>
-   <td style="text-align:center;"> 0.008 </td>
-   <td style="text-align:center;"> 0.08 </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.008</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>-0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.008</strong> </td>
-   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HRS </td>
@@ -162,28 +162,28 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.57</strong> </td>
    <td style="text-align:center;"> <strong>0.18</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.68 </td>
+   <td style="text-align:center;"> 0.34 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
    <td style="text-align:center;"> -0.009 </td>
    <td style="text-align:center;"> 0.01 </td>
-   <td style="text-align:center;"> 0.47 </td>
+   <td style="text-align:center;"> 0.24 </td>
    <td style="text-align:center;"> 0.002 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.93 </td>
+   <td style="text-align:center;"> 0.46 </td>
    <td style="text-align:center;"> -0.02 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.82 </td>
+   <td style="text-align:center;"> 0.41 </td>
    <td style="text-align:center;"> <strong>0.31</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -192,64 +192,64 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.009</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.03</strong> </td>
    <td style="text-align:center;"> <strong>0.01</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.01 </td>
-   <td style="text-align:center;"> 0.33 </td>
+   <td style="text-align:center;"> 0.17 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SATSA </td>
    <td style="text-align:center;"> 0.04 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.30 </td>
+   <td style="text-align:center;"> 0.15 </td>
    <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> 0.07 </td>
-   <td style="text-align:center;"> 0.28 </td>
+   <td style="text-align:center;"> 0.14 </td>
    <td style="text-align:center;"> <strong>-0.37</strong> </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> 0.16 </td>
    <td style="text-align:center;"> 0.16 </td>
-   <td style="text-align:center;"> 0.30 </td>
-   <td style="text-align:center;"> -0.21 </td>
-   <td style="text-align:center;"> 0.11 </td>
-   <td style="text-align:center;"> 0.07 </td>
+   <td style="text-align:center;"> 0.15 </td>
+   <td style="text-align:center;"> <strong>-0.21</strong> </td>
+   <td style="text-align:center;"> <strong>0.11</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.15</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.003 </td>
    <td style="text-align:center;"> 0.07 </td>
-   <td style="text-align:center;"> 0.97 </td>
+   <td style="text-align:center;"> 0.48 </td>
    <td style="text-align:center;"> -0.02 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.61 </td>
+   <td style="text-align:center;"> 0.30 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.14 </td>
+   <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> <strong>-0.21</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.21</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.14 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.14 </td>
+   <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> <strong>0.14</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
