--- a/03-results/10-tables/meta-study-tables/imp_Quadratic_slope_Main_adj.html
+++ b/03-results/10-tables/meta-study-tables/imp_Quadratic_slope_Main_adj.html
@@ -136,22 +136,22 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.04 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.11 </td>
+   <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> <strong>-0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.25</strong> </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.22</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>1.60</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -160,7 +160,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.009 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.67 </td>
+   <td style="text-align:center;"> 0.34 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
@@ -172,7 +172,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>0.43</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -199,16 +199,16 @@
    <td style="text-align:center;">  </td>
    <td style="text-align:center;"> -0.04 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.30 </td>
+   <td style="text-align:center;"> 0.15 </td>
    <td style="text-align:center;"> <strong>0.13</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.03 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.11 </td>
+   <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.16 </td>
+   <td style="text-align:center;"> 0.08 </td>
    <td style="text-align:center;"> <strong>-0.74</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -217,13 +217,13 @@
    <td style="text-align:center;">  </td>
    <td style="text-align:center;"> 0.006 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.81 </td>
+   <td style="text-align:center;"> 0.40 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
    <td style="text-align:center;"> -0.001 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.98 </td>
+   <td style="text-align:center;"> 0.49 </td>
    <td style="text-align:center;"> <strong>-0.04</strong> </td>
    <td style="text-align:center;"> <strong>0.004</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -247,7 +247,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -256,7 +256,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.06 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.15 </td>
+   <td style="text-align:center;"> 0.08 </td>
    <td style="text-align:center;"> <strong>0.38</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -289,7 +289,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>0.69</strong> </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -298,7 +298,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.51</strong> </td>
    <td style="text-align:center;"> <strong>0.19</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> <strong>-0.60</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -307,19 +307,19 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.03 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.40 </td>
+   <td style="text-align:center;"> 0.20 </td>
    <td style="text-align:center;"> -0.03 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.26 </td>
+   <td style="text-align:center;"> 0.13 </td>
    <td style="text-align:center;"> -0.003 </td>
    <td style="text-align:center;"> 0.06 </td>
-   <td style="text-align:center;"> 0.96 </td>
+   <td style="text-align:center;"> 0.48 </td>
    <td style="text-align:center;"> <strong>0.27</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.17</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -331,25 +331,25 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.01 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.73 </td>
+   <td style="text-align:center;"> 0.37 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
    <td style="text-align:center;"> 0.004 </td>
    <td style="text-align:center;"> 0.03 </td>
-   <td style="text-align:center;"> 0.89 </td>
+   <td style="text-align:center;"> 0.44 </td>
    <td style="text-align:center;"> 0.003 </td>
    <td style="text-align:center;"> 0.006 </td>
-   <td style="text-align:center;"> 0.68 </td>
+   <td style="text-align:center;"> 0.34 </td>
    <td style="text-align:center;"> <strong>0.22</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.04 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.41 </td>
+   <td style="text-align:center;"> 0.20 </td>
    <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> 0.13 </td>
-   <td style="text-align:center;"> 0.45 </td>
+   <td style="text-align:center;"> 0.22 </td>
    <td style="text-align:center;"> <strong>-0.33</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -367,16 +367,16 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>-0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.03</strong> </td>
-   <td style="text-align:center;"> <strong>0.04</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>-0.27</strong> </td>
    <td style="text-align:center;"> <strong>0.07</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.06 </td>
-   <td style="text-align:center;"> 0.71 </td>
+   <td style="text-align:center;"> 0.35 </td>
    <td style="text-align:center;"> -0.01 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.59 </td>
+   <td style="text-align:center;"> 0.29 </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -388,64 +388,64 @@
    <td style="text-align:center;">  </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
-   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> OCTOTWIN </td>
    <td style="text-align:center;"> -3.03 </td>
    <td style="text-align:center;"> 2.20 </td>
-   <td style="text-align:center;"> 0.17 </td>
+   <td style="text-align:center;"> 0.08 </td>
    <td style="text-align:center;"> 0.63 </td>
    <td style="text-align:center;"> 0.41 </td>
-   <td style="text-align:center;"> 0.13 </td>
-   <td style="text-align:center;"> 0.17 </td>
-   <td style="text-align:center;"> 0.10 </td>
-   <td style="text-align:center;"> 0.10 </td>
+   <td style="text-align:center;"> 0.06 </td>
+   <td style="text-align:center;"> <strong>0.17</strong> </td>
+   <td style="text-align:center;"> <strong>0.10</strong> </td>
+   <td style="text-align:center;"> <strong>0.05</strong> </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;"> <strong>1.23</strong> </td>
    <td style="text-align:center;"> <strong>0.61</strong> </td>
-   <td style="text-align:center;"> <strong>0.04</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.66</strong> </td>
    <td style="text-align:center;"> <strong>0.23</strong> </td>
    <td style="text-align:center;"> <strong>0.00</strong> </td>
    <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.29 </td>
-   <td style="text-align:center;"> 0.83 </td>
+   <td style="text-align:center;"> 0.42 </td>
    <td style="text-align:center;"> -0.39 </td>
    <td style="text-align:center;"> 0.47 </td>
-   <td style="text-align:center;"> 0.41 </td>
+   <td style="text-align:center;"> 0.20 </td>
    <td style="text-align:center;"> 0.20 </td>
    <td style="text-align:center;"> 0.16 </td>
-   <td style="text-align:center;"> 0.21 </td>
+   <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> -0.07 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.46 </td>
+   <td style="text-align:center;"> 0.23 </td>
    <td style="text-align:center;"> -0.09 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.35 </td>
+   <td style="text-align:center;"> 0.17 </td>
    <td style="text-align:center;"> -0.13 </td>
    <td style="text-align:center;"> 0.20 </td>
-   <td style="text-align:center;"> 0.51 </td>
+   <td style="text-align:center;"> 0.25 </td>
    <td style="text-align:center;"> 0.06 </td>
    <td style="text-align:center;"> 0.31 </td>
-   <td style="text-align:center;"> 0.85 </td>
+   <td style="text-align:center;"> 0.42 </td>
    <td style="text-align:center;"> 0.07 </td>
    <td style="text-align:center;"> 0.10 </td>
-   <td style="text-align:center;"> 0.47 </td>
+   <td style="text-align:center;"> 0.23 </td>
    <td style="text-align:center;"> -0.02 </td>
    <td style="text-align:center;"> 0.18 </td>
-   <td style="text-align:center;"> 0.93 </td>
+   <td style="text-align:center;"> 0.46 </td>
    <td style="text-align:center;"> <strong>0.55</strong> </td>
    <td style="text-align:center;"> <strong>0.10</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.11 </td>
    <td style="text-align:center;"> 0.12 </td>
-   <td style="text-align:center;"> 0.33 </td>
+   <td style="text-align:center;"> 0.17 </td>
    <td style="text-align:center;"> 0.29 </td>
    <td style="text-align:center;"> 0.18 </td>
-   <td style="text-align:center;"> 0.10 </td>
+   <td style="text-align:center;"> 0.05 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SATSA </td>
@@ -457,10 +457,10 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.05 </td>
    <td style="text-align:center;"> 0.04 </td>
-   <td style="text-align:center;"> 0.28 </td>
+   <td style="text-align:center;"> 0.14 </td>
    <td style="text-align:center;"> <strong>0.20</strong> </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
-   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
    <td style="text-align:center;"> <strong>0.74</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -469,46 +469,46 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.32</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
-   <td style="text-align:center;"> <strong>0.04</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>-0.20</strong> </td>
    <td style="text-align:center;"> <strong>0.06</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.06 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.52 </td>
+   <td style="text-align:center;"> 0.26 </td>
    <td style="text-align:center;"> <strong>-0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong>0.04</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;">  </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.12 </td>
-   <td style="text-align:center;"> 0.91 </td>
+   <td style="text-align:center;"> 0.45 </td>
    <td style="text-align:center;"> 0.03 </td>
    <td style="text-align:center;"> 0.09 </td>
-   <td style="text-align:center;"> 0.78 </td>
+   <td style="text-align:center;"> 0.39 </td>
    <td style="text-align:center;"> 0.01 </td>
    <td style="text-align:center;"> 0.06 </td>
-   <td style="text-align:center;"> 0.80 </td>
+   <td style="text-align:center;"> 0.40 </td>
    <td style="text-align:center;"> <strong>0.09</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong>0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>0.85</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> 0.02 </td>
    <td style="text-align:center;"> 0.05 </td>
-   <td style="text-align:center;"> 0.76 </td>
+   <td style="text-align:center;"> 0.38 </td>
    <td style="text-align:center;"> -0.07 </td>
    <td style="text-align:center;"> 0.08 </td>
-   <td style="text-align:center;"> 0.40 </td>
+   <td style="text-align:center;"> 0.19 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
    <td style="text-align:center;"> <strong>0.14</strong> </td>
    <td style="text-align:center;"> <strong>0.05</strong> </td>
-   <td style="text-align:center;"> <strong>0.00</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> <strong>0.16</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -541,13 +541,13 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.48 </td>
    <td style="text-align:center;"> 0.46 </td>
-   <td style="text-align:center;"> 0.32 </td>
+   <td style="text-align:center;"> 0.15 </td>
    <td style="text-align:center;"> <strong>0.08</strong> </td>
    <td style="text-align:center;"> <strong>0.04</strong> </td>
-   <td style="text-align:center;"> <strong>0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> 0.03 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.11 </td>
+   <td style="text-align:center;"> 0.05 </td>
    <td style="text-align:center;"> <strong>0.11</strong> </td>
    <td style="text-align:center;"> <strong>0.02</strong> </td>
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
@@ -559,7 +559,7 @@
    <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
    <td style="text-align:center;"> -0.01 </td>
    <td style="text-align:center;"> 0.02 </td>
-   <td style="text-align:center;"> 0.48 </td>
+   <td style="text-align:center;"> 0.23 </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Meta-Analytic </td>
