--- a/03-results/10-tables/meta-study-tables/unimp_Linear_intercept_Main_none.html
+++ b/03-results/10-tables/meta-study-tables/unimp_Linear_intercept_Main_none.html
@@ -39,57 +39,57 @@
 <tbody>
   <tr>
    <td style="text-align:right;"> ELSA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.06</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.18</strong> </td>
+   <td style="text-align:center;"> <strong>0.008</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.007</strong> </td>
+   <td style="text-align:center;"> <strong>0.00</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HRS </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.11</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>-0.06</strong> </td>
+   <td style="text-align:center;"> <strong>0.010</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> OCTOTWIN </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.33</strong> </td>
+   <td style="text-align:center;"> <strong>0.18</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SATSA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.37</strong> </td>
+   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.28</strong> </td>
+   <td style="text-align:center;"> <strong>0.010</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHP </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.010</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Meta-Analytic </td>
