--- a/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Main_none.html
+++ b/03-results/10-tables/meta-study-tables/unimp_Quadratic_slope_Main_none.html
@@ -43,84 +43,84 @@
 <tbody>
   <tr>
    <td style="text-align:right;"> ELSA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>-0.16</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.15</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> GSOEP </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.26</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.004</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HILDA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>-0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>-0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.004</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> HRS </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>-0.09</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>0.08</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> LISS </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>-0.05</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.01</strong> </td>
+   <td style="text-align:center;"> <strong>0.006</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> OCTOTWIN </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> -3.45 </td>
+   <td style="text-align:center;"> 2.19 </td>
+   <td style="text-align:center;"> 0.06 </td>
+   <td style="text-align:center;"> <strong>0.72</strong> </td>
+   <td style="text-align:center;"> <strong>0.42</strong> </td>
+   <td style="text-align:center;"> <strong>0.04</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SATSA </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.28</strong> </td>
+   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.13</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHARE </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.07</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.13</strong> </td>
+   <td style="text-align:center;"> <strong>0.009</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> SHP </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
-   <td style="text-align:center;">  </td>
+   <td style="text-align:center;"> <strong>0.11</strong> </td>
+   <td style="text-align:center;"> <strong>0.02</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
+   <td style="text-align:center;"> <strong>0.03</strong> </td>
+   <td style="text-align:center;"> <strong>0.005</strong> </td>
+   <td style="text-align:center;"> <strong>&lt; .001</strong> </td>
   </tr>
   <tr>
    <td style="text-align:right;"> Meta-Analytic </td>
