updated table formatting

--- a/03-results/10-tables/meta-tables/unimp_Linear_slope_b.age_adj.html
+++ b/03-results/10-tables/meta-tables/unimp_Linear_slope_b.age_adj.html
@@ -280,8 +280,8 @@ border: 0;
 
 </head>
 <body>
-<table class="table" style="width: auto !important; margin-left: auto; margin-right: auto;">
-<caption>Covariate Adjusted Loneliness-Linear model with Predictor Main Effects and Baseline Age Interactions</caption>
+<table class=" lightable-classic" style="font-size: 12px; font-family: Times New Roman; width: auto !important; margin-left: auto; margin-right: auto;">
+<caption style="font-size: initial !important;">Covariate Adjusted Loneliness-Linear model with Predictor Main Effects and Baseline Age Interactions</caption>
  <thead>
   <tr>
    <th style="text-align:right;"> Term </th>
