--- a/03-results/10-tables/study-summaries/unimp_Quadratic_intercept_Main_none.html
+++ b/03-results/10-tables/study-summaries/unimp_Quadratic_intercept_Main_none.html
@@ -280,20 +280,20 @@ border: 0;
 
 </head>
 <body>
-<table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;">
+<table class=" lightable-classic" style="font-size: 12px; font-family: Times New Roman; width: auto !important; margin-left: auto; margin-right: auto;">
 <caption style="font-size: initial !important;">Unadjusted Loneliness-Quadratic model with Predictor Main Effects</caption>
  <thead>
 <tr>
-<th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">ELSA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">GSOEP</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">HILDA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">HRS</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">LISS</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">OCTOTWIN</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SATSA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SHARE</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SHP</div></th>
+<th style="empty-cells: hide;" colspan="1"></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">ELSA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">GSOEP</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">HILDA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">HRS</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">LISS</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">OCTOTWIN</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SATSA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SHARE</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SHP</div></th>
 </tr>
   <tr>
    <th style="text-align:right;"> Term </th>
@@ -318,35 +318,45 @@ border: 0;
   </tr>
  </thead>
 <tbody>
-  <tr grouplength="3"><td colspan="19" style="border-bottom: 1px solid;"><strong>Fixed</strong></td></tr>
+  <tr grouplength="3"><td colspan="19" style="border-bottom: 0;"><strong>Fixed</strong></td></tr>
 <tr>
    <td style="text-align:right;padding-left: 2em;" indentlevel="1"> (Intercept) </td>
    <td style="text-align:center;"> 1.82<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.70<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.84<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.00<br>(0.04) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.16<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 3.38<br>(2.51) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.70<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.84<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.00<br>(0.04) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.16<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 3.38<br>(2.51) </td>
    <td style="text-align:center;"> 0.09 </td>
    <td style="text-align:center;"> 1.39<br>(0.05) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.05<br>(0.01) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.66<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-  </tr>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.05<br>(0.01) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.66<br>(0.02) </td>
+   <td style="text-align:center;"> 
+  </td>
+</tr>
   <tr>
    <td style="text-align:right;padding-left: 2em;" indentlevel="1"> Age </td>
    <td style="text-align:center;"> -0.14<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.28<br>(0.01) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> -0.01<br>(0.01) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.28<br>(0.01) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> -0.01<br>(0.01) </td>
    <td style="text-align:center;"> 0.17 </td>
    <td style="text-align:center;"> -0.03<br>(0.04) </td>
    <td style="text-align:center;"> 0.19 </td>
@@ -355,33 +365,44 @@ border: 0;
    <td style="text-align:center;"> -2.05<br>(1.88) </td>
    <td style="text-align:center;"> 0.14 </td>
    <td style="text-align:center;"> 0.29<br>(0.03) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.09<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.13<br>(0.01) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-  </tr>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.09<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.13<br>(0.01) </td>
+   <td style="text-align:center;"> 
+  </td>
+</tr>
   <tr>
    <td style="text-align:right;padding-left: 2em;" indentlevel="1"> Age^2 </td>
    <td style="text-align:center;"> 0.14<br>(0.01) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.05<br>(0.004) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> -0.01<br>(0.003) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.08<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.02<br>(0.004) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.44<br>(0.35) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.05<br>(0.004) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> -0.01<br>(0.003) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.08<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.02<br>(0.004) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.44<br>(0.35) </td>
    <td style="text-align:center;"> 0.10 </td>
    <td style="text-align:center;"> 0.12<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.12<br>(0.008) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 0.03<br>(0.004) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-  </tr>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.12<br>(0.008) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 0.03<br>(0.004) </td>
+   <td style="text-align:center;"> 
+  </td>
+</tr>
 </tbody>
 <tfoot>
 <tr>
