--- a/03-results/10-tables/study-summaries/unimp_unconditional_intercept_Main_none.html
+++ b/03-results/10-tables/study-summaries/unimp_unconditional_intercept_Main_none.html
@@ -280,20 +280,20 @@ border: 0;
 
 </head>
 <body>
-<table class="table" style="font-size: 12px; width: auto !important; margin-left: auto; margin-right: auto;">
+<table class=" lightable-classic" style="font-size: 12px; font-family: Times New Roman; width: auto !important; margin-left: auto; margin-right: auto;">
 <caption style="font-size: initial !important;">Unadjusted Unconditional with Predictor Main Effects</caption>
  <thead>
 <tr>
-<th style="empty-cells: hide;border-bottom:hidden;" colspan="1"></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">ELSA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">GSOEP</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">HILDA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">HRS</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">LISS</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">OCTOTWIN</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SATSA</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SHARE</div></th>
-<th style="border-bottom:hidden;padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #ddd; padding-bottom: 5px; ">SHP</div></th>
+<th style="empty-cells: hide;" colspan="1"></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">ELSA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">GSOEP</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">HILDA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">HRS</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">LISS</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">OCTOTWIN</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SATSA</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SHARE</div></th>
+<th style="padding-bottom:0; padding-left:3px;padding-right:3px;text-align: center; " colspan="2"><div style="border-bottom: 1px solid #111111; margin-bottom: -1px; ">SHP</div></th>
 </tr>
   <tr>
    <th style="text-align:right;"> Term </th>
@@ -318,28 +318,37 @@ border: 0;
   </tr>
  </thead>
 <tbody>
-  <tr grouplength="1"><td colspan="19" style="border-bottom: 1px solid;"><strong>Fixed</strong></td></tr>
+  <tr grouplength="1"><td colspan="19" style="border-bottom: 0;"><strong>Fixed</strong></td></tr>
 <tr>
    <td style="text-align:right;padding-left: 2em;" indentlevel="1"> (Intercept) </td>
    <td style="text-align:center;"> 1.93<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.57<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.78<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 2.11<br>(0.03) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.26<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.11<br>(0.10) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.76<br>(0.05) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.28<br>(0.01) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-   <td style="text-align:center;"> 1.67<br>(0.02) </td>
-   <td style="text-align:center;"> &lt; .001 </td>
-  </tr>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.57<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.78<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 2.11<br>(0.03) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.26<br>(0.02) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.11<br>(0.10) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.76<br>(0.05) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.28<br>(0.01) </td>
+   <td style="text-align:center;"> 
+   </td>
+<td style="text-align:center;"> 1.67<br>(0.02) </td>
+   <td style="text-align:center;"> 
+  </td>
+</tr>
 </tbody>
 <tfoot>
 <tr>
